#############################################################################
BETA PUBLIC RELEASE VERSION 1.1.0       4-12-06
#############################################################################
  - NEW FEATURES
    * Structural data files have been moved to XML format.  This should make 
      it easier for users and developers to contribute to the project.
    * Added an extensions directory for small scripts.  Scripts in this 
      directory will be automatically loaded into PDB2PQR has command line
      options for post-processing, and can be easily customized.
    * Code has been greatly cleaned so as to minimize values hard-coded
      into functions and to allow greater customizability via external
      XML files.  This includes a more object-oriented hierarchy of
      structures.
    * Improved detection of the termini of chains.
    * Assign-only now does just that - only assigns parameters to atoms
      without additions, debumping, or optimizations.
    * Added a --clean command line option which does no additions,
      optimizations, or forcefield assignment, but simply aligns the PDB
      columns on output.  Useful for using post-processing scripts like
      those in the extensions directory without modifying the original input
      file.
    * The --userff flag has been replaced by opening up the --ff option
      to user-defined files.
    * Pydoc documentation is now included in html/pydoc.
    * A programmer's guide has been included to explain programming decisions
      and ease future development.
    * A --ffout flag has been added to allow users to output a PQR file in
      the naming scheme of the desired forcefield.
    * User guide FAQ updated.
    * The efficiency of the hydrogen bonding detection script (--hbond) has 
      been greatly improved. 
    * Increased the number of options available to users via the PDB2PQR
      web server.
  - BUG FIXES